[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2021"

[dependencies]
pokemon-rs = { git = "https://github.com/JonasJore/pokemon-rs.git", branch = "master" }
actix-web = "4"
tracing-actix-web = "0.7"
tracing = "0.1"
log = "0.4"
env_logger = "0.9"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
